(executable
 (name jskicadsch)
 (libraries js_of_ocaml js_of_ocaml-tyxml js_of_ocaml-lwt kicadsch)
 (preprocess (pps js_of_ocaml-ppx))
)

(rule
  (targets jskicadsch.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:jskicadsch.bc} -o %{targets} --pretty)))

(alias
 (name DEFAULT)
 (deps jskicadsch.js index.html)
)
